--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,10 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
-
+*.pyc
+.idea/
+staticfiles
+local_settings.py
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
